Fixed store bugs

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,6 +9,7 @@
             name="viewModel"
             type="com.dalvik.pokemonsters.ui.news.NewsViewModel" />
 
+        <import type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -65,15 +66,34 @@
             app:layout_constraintStart_toEndOf="@+id/textSubtitleCategory"
             app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />
 
+
+        <TextView
+            android:id="@+id/textMaintenance"
+            style="@style/TextViewTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/ic_news"
+            android:drawableTint="@color/primary_gray"
+            android:gravity="center"
+            android:imeOptions="actionDone"
+            android:padding="@dimen/_14sdp"
+            android:text="@{viewModel.msgLoadInformation.toString()}"
+            android:visibility="@{viewModel.showAllTabs == true ? View.GONE : View.VISIBLE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory" />
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:visibility="@{viewModel.showAllTabs == true ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
-            app:onRefreshListener="@{() -> viewModel.getNews()}"
+            app:onRefreshListener="@{() -> viewModel.getConfig()}"
             app:refreshing="@{viewModel.isLoading}">
 
             <androidx.recyclerview.widget.RecyclerView
