Fixed store bugs

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,17 +72,16 @@
             style="@style/TextViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableTop="@drawable/ic_news"
-            android:drawableTint="@color/primary_gray"
             android:gravity="center"
-            android:imeOptions="actionDone"
             android:padding="@dimen/_14sdp"
             android:text="@{viewModel.msgLoadInformation.toString()}"
             android:visibility="@{viewModel.showAllTabs == true ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory" />
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
+            app:drawableTopCompat="@drawable/ic_news"
+            app:drawableTint="@color/primary_gray" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
