--- a/app/src/main/res/layout/fragment_region_home.xml
+++ b/app/src/main/res/layout/fragment_region_home.xml
@@ -30,6 +30,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageView
+            android:id="@+id/btnInfo"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
+            android:scaleType="center"
+            android:src="@drawable/ic_info"
+            android:tint="@color/primary_gray"
+            app:layout_constraintBottom_toBottomOf="@+id/textPokemonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textPokemonName" />
+
 
         <TextView
             android:id="@+id/textMaintenance"
@@ -40,12 +51,12 @@
             android:padding="@dimen/_14sdp"
             android:text="@{viewModel.msgLoadInformation.toString()}"
             android:visibility="@{viewModel.showAllTabs == true ? View.GONE : View.VISIBLE}"
+            app:drawableTint="@color/primary_gray"
+            app:drawableTopCompat="@drawable/ic_news"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
-            app:drawableTopCompat="@drawable/ic_news"
-            app:drawableTint="@color/primary_gray" />
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory" />
 
 
         <View
